# DSU

./: .dockerignore  .gitignore  CMakeLists.txt  DSU.spec  Dockerfile  QUICKSTART.md  README.md  README_FULL.md  WINDOWS.md  __init__.py  app.py  app_modern.py  benchmark_firmware.py  build_exe.bat  build_exe.sh  docker-compose.yml  loader.py  pyproject.toml  requirements.txt  run.sh
config/: config_pos.py  devices.ini
go-firmware/: README.md  firmware  firmware.go  go.mod
interface/: icons_dict.py  modern_ui.py  tk_int_dsu.py
logic/: cmd_queue.py  devices.py  eludp.py  firmware.py  firmware_go.py  locator.py
src/dsu/: __init__.py  __main__.py  app.py  cli.py  hotkeys.py
src/dsu/config/: defaults.ini  settings.py
src/dsu/domain/: codec.py  events.py  models.py  registry.py
src/dsu/net/: cmd_queue.py  controller.py  eludp.py  firmware.py  locator.py
src/dsu/ui/: __init__.py  _helpers.py  app_view.py  confirm.py  device_table.py  flash_state.py  inspector.py  log_panel.py  main.py  menu.py  theme.py  toast.py  toolbar.py
src/dsu/ui/tabs/: __init__.py  firmware_tab.py  info_tab.py  settings_tab.py
src/dsu_native/: CMakeLists.txt  bindings.cpp
src/dsu_native/firmware/: header.cpp  loader.cpp  loader.hpp  packet.cpp
src/dsu_native/include/dsu_native/: api.hpp
test_module/: test.py
tests/: conftest.py
tests/cpp/: CMakeLists.txt  test_header.cpp  test_packet.cpp
tests/fixtures/: helpers.py
tests/native/: conftest.py  test_firmware_loader.py
tests/smoke/: test_gui_launch.py
tests/unit/: test_codec.py  test_events.py  test_flash_state.py  test_models.py  test_registry.py  test_ui_helpers.py
