[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "dsu"
version = "2.0.0"
description = "Device Setup Utility — discover, configure, and update network controllers"
requires-python = ">=3.11"
dependencies = [
    "netifaces>=0.11",
    "flet>=0.21",
]

[project.optional-dependencies]
hotkeys = ["keyboard>=0.13"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
dsu = "dsu.cli:main"

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.20"
wheel.packages = ["src/dsu"]
build-dir = "build/{wheel_tag}"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
